--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
   "private": true,
   "dependencies": {
     "@agm/core": "1.0.0-beta.2",
-    "@angular/animations": "5.0.0",
-    "@angular/cdk": "2.0.0-beta.12",
-    "@angular/common": "5.0.0",
-    "@angular/compiler": "5.0.0",
-    "@angular/core": "5.0.0",
+    "@angular/animations": "^5.2.0",
+    "@angular/cdk": "^5.2.1",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/core": "^5.2.0",
     "@angular/flex-layout": "2.0.0-beta.10",
-    "@angular/forms": "5.0.0",
-    "@angular/http": "5.0.0",
-    "@angular/material": "2.0.0-beta.12",
-    "@angular/platform-browser": "5.0.0",
-    "@angular/platform-browser-dynamic": "5.0.0",
-    "@angular/router": "5.0.0",
+    "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.0",
+    "@angular/material": "^5.2.1",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/router": "^5.2.0",
     "@swimlane/ngx-charts": "6.1.0",
     "@swimlane/ngx-datatable": "11.0.0",
     "angular-calendar": "0.21.3",
@@ -42,28 +42,30 @@
     "ng2-validation": "4.2.0",
     "ngx-quill": "2.0.4",
     "perfect-scrollbar": "0.7.1",
-    "rxjs": "5.5.2",
-    "zone.js": "0.8.18"
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0",
-    "@angular/compiler-cli": "5.0.0",
+    "@angular/cli": "^1.7.0",
+    "@angular/compiler-cli": "^5.2.0",
     "@types/hopscotch": "0.2.28",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "6.0.60",
-    "codelyzer": "~2.0.0",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "codelyzer": "^4.0.1",
     "enhanced-resolve": "3.3.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.1.1",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~2.0.0",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "~0.2.0",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "~0.2.2",
-    "protractor": "~5.1.0",
-    "ts-node": "2.0.0",
-    "tslint": "4.5.0",
-    "typescript": "2.4.2"
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.2",
+    "ts-node": "~4.1.0",
+    "tslint": "~5.9.1",
+    "typescript": "~2.5.3",
+    "webpack": "^3.11.0"
   }
 }
